--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "qemu"]
 	path = qemu
 	url = git://git.qemu.org/qemu.git
+[submodule "gem5"]
+	path = gem5
+	url = https://gem5.googlesource.com/public/gem5/
